--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         <!-- content 1-->
         <div class="container-content">
             <a class="a-content">
-                <img src="kyrell hi.jpg" class="img-hi-content" alt="foto di lingkaran HI"/>
+                <img src="kyrell 1.jpg" class="img-1-content" alt="foto di lingkaran HI"/>
                 <div class="kata-sambutan">
                     <p>
-                        Hi kawan, welcome!
-                        <br>Salam sejahtera bagi kita semua. Selamat datang di website bakal calon ketua OSIS dan wakil ketua OSIS Kyrell dan *****
+                        Hallo Nesss, Minta waktu nya bentar donggg
+                        <br>Inget moment ini?? Mungkin ini adalah moment terindahku dalam perjalanan masa muda ku. Karna juara umum lau baleng? Ku rasa bukan, aku rasa karna bisa ketemu sama kamu dengan cara dan momen yg unik menurutku.
+                        Ternyata bukan sampai situ aja, ternyata kebahagiaan itu berlanjut sampai aku benar benar bisa memiliki kamu yg ku impikan dari dulu entah kapan itu. Makasih ya kamu udah mau terima aku apa adanya kemaren. 
+                        Meski memang kemaren hubungan yg cukup singkat. Mungkin 1 bulan 15 hari yang terindah bagiku.
                     </p>
                 </div>
             </a>
@@ -45,7 +47,7 @@
 
         <!-- footer-->
         <div class="container-footer">
-            <h1 class="h1-footer">Please Enjoy</h1>
+            <h2 class="h1-footer">I'm Sorry Nes</h2>
         </div>
         <!-- footer end-->
     </div>
